fix: fix some links

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </section>
         <section>
             <h2>Code examples</h2>
-            <p>Elservice – WordPres template from scratch</p>
-            <p>mega-omega – child template of WordPress from scratch: source, demo</p>
+            <p><a href="https://github.com/baban666/elservice" target="_blank">Elservice</a> – WordPres template from scratch</p>
+            <p><a href="https://mega-omega.ru/" target="_blank">mega-omega</a> – child template of WordPress from scratch: <a href="https://github.com/baban666/rehub-blankchild" target="_blank">source</a></p>
         </section>
         <section>
             <h2>Work experience</h2>
