--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <section>
             <h2>Code examples</h2>
-            <p><a href="https://github.com/baban666/elservice" target="_blank">Elservice</a> – WordPres template from scratch</p>
+            <p><a href="https://github.com/baban666/elservice/" target="_blank">Elservice</a> – WordPres template from scratch</p>
             <p><a href="https://mega-omega.ru/" target="_blank">mega-omega</a> – child template of WordPress from scratch: <a href="https://github.com/baban666/rehub-blankchild" target="_blank">source</a></p>
         </section>
         <section>
